exports[`test Button enable if usrname and password are filled 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
    }
  }>
  <View
    style={
      Object {
        "backgroundColor": "red",
        "height": 150,
        "marginTop": 15,
        "width": 550,
      }
    } />
  <MKTextField
    blurOnSubmit={true}
    onChangeText={[Function]}
    onSubmitEditing={[Function]}
    placeholder="Username"
    style={
      Object {
        "height": 45,
        "marginBottom": 15,
        "width": 650,
      }
    }
    value="mrMeeseeks" />
  <MKTextField
    blurOnSubmit={true}
    onChangeText={[Function]}
    onSubmitEditing={[Function]}
    password={true}
    placeholder="Password"
    secureTextEntry={true}
    selectTextOnFocus={true}
    style={
      Object {
        "height": 45,
        "marginBottom": 15,
        "width": 650,
      }
    }
    value="Look at me" />
  <MKButton
    enabled={true}
    onPress={[Function]} />
  <TouchableOpacity
    activeOpacity={0.2}
    onPress={[Function]}
    style={
      Object {
        "marginTop": 10,
      }
    }>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail">
      Not Now
    </Text>
  </TouchableOpacity>
</View>
`;

exports[`test renders correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
    }
  }>
  <View
    style={
      Object {
        "backgroundColor": "red",
        "height": 150,
        "marginTop": 15,
        "width": 550,
      }
    } />
  <MKTextField
    blurOnSubmit={true}
    onChangeText={[Function]}
    onSubmitEditing={[Function]}
    placeholder="Username"
    style={
      Object {
        "height": 45,
        "marginBottom": 15,
        "width": 650,
      }
    }
    value="" />
  <MKTextField
    blurOnSubmit={true}
    onChangeText={[Function]}
    onSubmitEditing={[Function]}
    password={true}
    placeholder="Password"
    secureTextEntry={true}
    selectTextOnFocus={true}
    style={
      Object {
        "height": 45,
        "marginBottom": 15,
        "width": 650,
      }
    }
    value="" />
  <MKButton
    enabled={false}
    onPress={[Function]} />
  <TouchableOpacity
    activeOpacity={0.2}
    onPress={[Function]}
    style={
      Object {
        "marginTop": 10,
      }
    }>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail">
      Not Now
    </Text>
  </TouchableOpacity>
</View>
`;
